2011-02-24  John W. Eaton  <jwe@octave.org>

	* strings/strchr.m: Avoid implicit string to number conversion.
	Bug #32546.  From Kim Hansen <kim@i9.dk>.

2011-02-22  Ben Abbott  <bpabbott@mac.com>

	* plot/subplot.m: Use new looseinset property introduced by changeset
	12467. Decrease spacing between subplots rows / columns. Clean up and
	add comments.

2010-02-22  Rik  <octave@nomad.inbox5.com>

	* io/strread.m, plot/whitebg.m, strings/regexptranslate.m,
	testfun/runtests.m: Use single quotes around regexp patterns.

2010-02-20  Karsten Trulsen  <karstent@math.uio.no>

	* signal/fftshift.m: Fix broken function.  Bug 32442.

2010-02-21  Carlo de Falco  <kingcrimson@tiscali.it>

	* pkg/get_forge_pkg.m: Fix typo in new PCRE style regular expression.

2010-02-19  Rik  <octave@nomad.inbox5.com>

	* io/dlmwrite.m, pkg/get_forge_pkg.m, plot/__gnuplot_ginput__.m,
	plot/__go_draw_axes__.m, testfun/runtests.m: Use PCRE regular
	expressions to simplify scripts.

2011-02-19  Ben Abbott  <bpabbott@mac.com>

	* plot/__print_parse_opts__.m, plot/private/__ghostscript__.m: Improve
	warnings when shell utilties are missing.

2011-02-19  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* general/interp1.m: Fix tests according to spline update of
	changeset 07e102029d2a (see bug 31780)

2011-02-17  Kai Habel  <kai.habel@gmx.de>

	* plot/private/__add_default_menu__.m: Rename fltk_gui_mode here
	as well.

2011-02-16  Ben Abbott  <bpabbott@mac.com>

	* plot/subplot.m: Decrease spacing between subplots rows / columns.
	Clean up and add comments.

2011-02-16  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* statistics/base/mean.m: Fix tests according to changeset 0f21f258aa17.

2011-02-15  Konstantinos Poulios  <logari81@gmail.com>

	* plot/__fltk_print__.m: Forward pipeline to drawnow instead of
	invoking a process here.  Bug #32319.

2010-02-14  Rik  <octave@nomad.inbox5.com>

	* plot/semilogxerr.m, plot/semilogyerr.m, special-matrix/pascal.m,